# sadfeelings

./: .gitignore  Cargo.toml  README.md  Rocket.toml
assets/css/: main.css
src/: main.rs
templates/: index.html.hbs
templates/error/: 404.html.hbs
