[package]
name = "sadfeelings"
version = "0.1.0"
authors = ["StefanYohansson <sy.fen0@gmail.com>"]

[dependencies]
rocket = "0.3.2"
rocket_codegen = "0.3.2"
github-rs = "0.5"
toml = "0.4"
serde = "1.0.11"
serde_derive = "1.0.11"

[dependencies.rss]
version = "1.0"
features = ["from_url"]

[dependencies.rocket_contrib]
version = "0.3.2"
default-features = false
features = ["handlebars_templates"]
